--- a/ssh/config
+++ b/ssh/config
@@ -7,13 +7,13 @@ Host narval
     Hostname narval.alliancecan.ca
     Port 22
     User jc204
-    IdentityFile ~/.ssh/id_drac
+    IdentityFile ~/.ssh/narval
 
 Host narval1
     Hostname narval1.alliancecan.ca
     Port 22
     User jc204
-    IdentityFile ~/.ssh/id_drac
+    IdentityFile ~/.ssh/narval
 
 Host whisper
     Hostname whisper.engineering.queensu.ca
