--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -6,13 +6,13 @@ family = "FiraMono Nerd Font"
 style = "Regular"
 
 [window]
-opacity = 0.7
+opacity = 0.6
 
 [window.padding]
 x = 5
 y = 5
 
 [terminal]
-[terminal.shell]
-program = "/usr/bin/zsh"
+[shell]
+program = "/run/current-system/sw/bin/zsh"
 
