--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -18,3 +18,10 @@
 	autoSetupRemote = true
 [credential]
 	helper = store
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
+[pager]
+	diff = bat
