--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,9 +1,9 @@
 [credential "https://github.com"]
 	helper = 
-	helper = !/usr/bin/gh auth git-credential
+	helper = !/usr/bin/env gh auth git-credential
 [credential "https://gist.github.com"]
 	helper = 
-	helper = !/usr/bin/gh auth git-credential
+	helper = !/usr/bin/env gh auth git-credential
 [user]
 	email = jacobchisholm1010@gmail.com
 	name = Jacob Chisholm
